build product review page by using a one time token to add review
